ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /comments(/|$)(.*)
            backend:
              serviceName: comments
              servicePort: 8081
          - path: /image-catalog(/|$)(.*)
            backend:
              serviceName: image-catalog
              servicePort: 8080
